[package]
name = "rsa"
version = "0.1.0"
description = "A program for verifying RSA signatures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rsa"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = { version = "1.1.0", features = ["derive"] }
solana-program = "1.17.3"

[dev-dependencies]
hex-literal = "0.4.1"